--- a/popo/package.json
+++ b/popo/package.json
@@ -11,21 +11,32 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
     "@mui/styled-engine-sc": "^6.4.6",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.18.1",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.484.0",
     "pdf-lib": "^1.17.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^19.1.0",
+    "react-feather": "^2.0.10",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.0",
-    "styled-components": "^6.1.16"
+    "react-router-dom": "^7.6.3",
+    "recharts": "^2.15.3",
+    "styled-components": "^6.1.16",
+    "sweetalert2": "^11.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
